--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
+  "scripts": {
+    "build": "npx parcel serve src/index.ts"
+  },
+  "browser": "dist/legacy/index.js",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@parcel/config-default": "^2.12.0",
     "@types/google.maps": "^3.55.4",
-    "amqplib": "^0.10.3",
-    "dexie": "^3.2.6",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "typescript-rabbitmq": "^0.0.8"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.5",
     "@types/node": "^20.11.28",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
